--- a/React/my-app/src/style/style.css
+++ b/React/my-app/src/style/style.css
@@ -5,8 +5,11 @@ body,
 html {
   font-family: "Lato", sans-serif;
   margin: 0;
+  margin-top: 1%;
   padding: 0;
-  text-align: center;
+  /* text-align: center; */
+  font-weight: bolder;
+  font-size: 38px;
 }
 p {
   font-size: 34px;
@@ -38,4 +41,8 @@ button {
   align-items: center;
   font-size: 34px;
   font-weight: bolder;
+}
+#main {
+  display: flex;
+  flex-direction: column;
 }
